--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=TrainService
 server.port=8082
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://awseb-e-rit9agpppk-stack-awsebrdsdatabase-yue4lg8aq9sh.ct60muyoq711.us-east-1.rds.amazonaws.com:3306/railway_train_db?createDatabaseIfNotExist=true
-spring.datasource.username=admin
-spring.datasource.password=VedantMete23
+spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:localhost}:${RDS_PORT:3306}/${RDS_DB_NAME:railway_train_db}
+spring.datasource.username=${RDS_USERNAME:root}
+spring.datasource.password=${RDS_PASSWORD:VedantMete23}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
