--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=TrainService
 server.port=8082
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:localhost}:${RDS_PORT:3306}/${RDS_DB_NAME:railway_train_db}
+spring.datasource.url=jdbc:mysql://awseb-e-sssdqj8nbz-stack-awsebrdsdatabase-chimyzdo3tj6.cu3uyokioz4w.us-east-1.rds.amazonaws.com:3306/railway_train_db
 spring.datasource.username=admin
 spring.datasource.password=VedantMete23
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
