--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=TrainService
 server.port=8082
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://awseb-e-cneq9egydm-stack-awsebrdsdatabase-au0gtazmygsa.cyjqsmq261g5.us-east-1.rds.amazonaws.com/railway_train_db
+spring.datasource.url=jdbc:mysql://awseb-e-rqpyanthbk-stack-awsebrdsdatabase-6hiwunvbphkq.cqr6us2cuf18.us-east-1.rds.amazonaws.com/railway_train_db
 spring.datasource.username=admin
 spring.datasource.password=VedantMete23
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
